--- a/manifest/rabbit-service.yml
+++ b/manifest/rabbit-service.yml
@@ -4,11 +4,11 @@ metadata:
   name: rabbitmq-service
   labels:
     app: rabbitmq-service
-    tier: web
+    tier: rabbitmq
 spec:
   ports:
   - port: 15672
     targetPort: 15672
   selector:
     app: rabbitmq
-    tier: web 
+    tier: rabbitmq
