--- a/manifest/rabbit-deployment.yml
+++ b/manifest/rabbit-deployment.yml
@@ -24,12 +24,12 @@ spec:
         - containerPort: 5672
         - containerPort: 5671
         env: 
-        - name: RABBITMQ_USERNAME
+        - name: RABBITMQ_DEFAULT_USER
           valueFrom:
             secretKeyRef:
               name: rabbitmq-credentials
               key: admin_username
-        - name: RABBITMQ_PASSWORD
+        - name: RABBITMQ_DEFAULT_PASS
           valueFrom:
             secretKeyRef:
               name: rabbitmq-credentials
