--- a/manifest/rabbit-deployment.yml
+++ b/manifest/rabbit-deployment.yml
@@ -15,8 +15,6 @@ spec:
       labels:
         app: rabbitmq
         tier: rabbitmq
-      annotations:
-        "pod.beta.kubernetes.io/hostname": rabbit-server
     spec:
       containers:
       - name: rabbitmq
@@ -26,6 +24,8 @@ spec:
         - containerPort: 5672
         - containerPort: 5671
         env:
+        - name: RABBITMQ_NODENAME
+          value: rabbitmq-server
         - name: RABBITMQ_DEFAULT_USER
           valueFrom:
             secretKeyRef:
