--- a/manifest/rabbitmq/rabbitmq.yml
+++ b/manifest/rabbitmq/rabbitmq.yml
@@ -1,19 +1,32 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: rabbitmq
+spec:
+  selector:
+    app: rabbitmq-server
+  ports:
+  - name: management-ui
+    port: 15672
+    targetPort: 15672
+  - name: queue-traffic
+    port: 5672
+    targetPort: 5672
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: rabbitmq-statefulset
-  labels:
-    app: rabbitmq
+  name: rabbitmq-server
 spec:
   selector:
     matchLabels:
-      app: rabbitmq
-  serviceName: rabbitmq-service
-  replicas: 1 
+      app: rabbitmq-server
+  replicas: 1
+  serviceName: rabbitmq
   template:
     metadata:
       labels:
-        app: rabbitmq
+        app: rabbitmq-server
     spec:
       containers:
       - name: rabbitmq
@@ -46,4 +59,3 @@ spec:
       resources:
         requests:
           storage: 1Gi
-
